cmake_minimum_required(VERSION 3.2)

PROJECT(dmbugs)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMBUGS_VERSION_MAJOR "1")
SET(DMBUGS_VERSION_MINOR "0")
SET(DMBUGS_VERSION_PATCH "1")
SET(DMBUGS_VERSION "${DMBUGS_VERSION_MAJOR}.${DMBUGS_VERSION_MINOR}.${DMBUGS_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMBUGS_VERSION}")

ADD_DEFINITIONS(-DUSE_DMBUGS)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

FILE(GLOB_RECURSE DMBUGS_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
)

IF (WIN32)
    LIST(APPEND DMBUGS_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE DMBUGSTEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    ADD_LIBRARY(dmbugs STATIC ${DMBUGS_SOURCES})
    ADD_EXECUTABLE(dmbugstest ${DMBUGSTEST_SOURCES})
    TARGET_LINK_LIBRARIES(dmbugstest dmbugs)
ELSEIF (APPLE)
    ADD_LIBRARY(dmbugs STATIC ${DMBUGS_SOURCES})
    ADD_EXECUTABLE(dmbugstest ${DMBUGSTEST_SOURCES})
    TARGET_LINK_LIBRARIES(dmbugstest dmbugs)
ELSEIF (UNIX)
    ADD_LIBRARY(dmbugs STATIC ${DMBUGS_SOURCES})
    ADD_EXECUTABLE(dmbugstest ${DMBUGSTEST_SOURCES})
    TARGET_LINK_LIBRARIES(dmbugstest dmbugs)
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET dmbugstest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:dmbugstest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS dmbugs
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(DMBUGS_LIBS "dmbugs")
#MARK_AS_ADVANCED(${DMBUGS_LIBS})